improve AsyncProcessor; add test