@@ -1,8 +1,8 @@
 package de.nerden.kafka.streams.processor;
 
 import de.nerden.kafka.streams.serde.KeyValueSerde;
-import java.util.Collections;
 import java.util.Set;
+import java.util.concurrent.Executors;
 import java.util.function.Consumer;
 import org.apache.kafka.common.serialization.Serde;
 import org.apache.kafka.common.serialization.Serdes;
@@ -15,28 +15,44 @@ import org.apache.kafka.streams.state.Stores;
 
 public class AsyncProcessorSupplier<K, V> implements ProcessorSupplier<K, V> {
 
-  private final String storeName;
+  private final String inflightMessagesStoreName;
+  private final String failedMessagesStoreName;
   private Consumer<KeyValue<K, V>> fn;
-  private final StoreBuilder<KeyValueStore<Long, KeyValue<K, V>>> storeBuilder;
+  private final StoreBuilder<KeyValueStore<Long, KeyValue<K, V>>> inflightMessagesStoreBuilder;
+  private final StoreBuilder<KeyValueStore<Long, KeyValue<K, V>>> failedMessagesStoreBuilder;
 
   public AsyncProcessorSupplier(
-      String storeName, Serde<K> keySerde, Serde<V> valueSerde, Consumer<KeyValue<K, V>> fn) {
-    this.storeName = storeName;
+      String inflightMessagesStoreName,
+      String failedMessagesStoreName,
+      Serde<K> keySerde,
+      Serde<V> valueSerde,
+      Consumer<KeyValue<K, V>> fn) {
+    this.inflightMessagesStoreName = inflightMessagesStoreName;
+    this.failedMessagesStoreName = failedMessagesStoreName;
     this.fn = fn;
-    this.storeBuilder =
+    this.inflightMessagesStoreBuilder =
         Stores.keyValueStoreBuilder(
-            Stores.inMemoryKeyValueStore(storeName),
+            Stores.inMemoryKeyValueStore(inflightMessagesStoreName),
+            Serdes.Long(),
+            new KeyValueSerde<>(keySerde, valueSerde));
+    this.failedMessagesStoreBuilder =
+        Stores.keyValueStoreBuilder(
+            Stores.inMemoryKeyValueStore(failedMessagesStoreName),
             Serdes.Long(),
             new KeyValueSerde<>(keySerde, valueSerde));
   }
 
   @Override
   public Processor<K, V> get() {
-    return new AsyncProcessor<>(storeName, fn);
+    return new AsyncProcessor<>(
+        inflightMessagesStoreName,
+        failedMessagesStoreName,
+        fn,
+        () -> Executors.newFixedThreadPool(100));
   }
 
   @Override
   public Set<StoreBuilder<?>> stores() {
-    return Collections.singleton(storeBuilder);
+    return Set.of(inflightMessagesStoreBuilder, failedMessagesStoreBuilder);
   }
 }
